--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@
 #########################
 GO_PORT = 8080
 GO_ENV = test
+
+#########################
+# PG DEVELOPMENT ENV
+#########################
+DATABASE_URI = test:test@tcp(db:3306)/todo?charset=utf8&parseTime=true&loc=Asia%2FTokyo
