--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
 	"workspaceFolder": "/go/src",
 	"settings": {},
 	"extensions": [
-		"golang.go"
+		"golang.go",
+		"42crunch.vscode-openapi"
 	]
 }
