--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ services:
   app:
     container_name: app
     restart: always
-    build: .
+    build:
+      args:
+        - target=dev
     volumes:
       - ./:/go/src
     tty: true
