--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
         - target=dev
     volumes:
       - ./:/go/src
+    environment:
+      - MYSQL_URI=mysql://test:test@tcp(db:3306)/todo?charset=utf8&parseTime=true&loc=Asia%2FTokyo
     tty: true
     ports:
       - 8081:8080
