--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,9 @@ services:
   ### DB SERVICE
   ### ===================
   db:
-    # image: postgres:12-alpine
     image: mysql:8.0.30
     container_name: db
+    platform: linux/amd64
     restart: always
     command: --default-authentication-plugin=mysql_native_password
     healthcheck:
@@ -49,8 +49,8 @@ services:
       MYSQL_ROOT_PASSWORD: test
     ports:
       - 3306:3306
-    # volumes:
-    #   - pg-data:/var/lib/postgresql/data
+    volumes:
+      - todo-db-data:/var/lib/mysql
     networks:
       - restapi_network
   ### ===================
@@ -117,3 +117,5 @@ services:
   ### ===================================
 networks:
   restapi_network:
+volumes:
+  todo-db-data:
